<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_beranda"
        android:iconTint="#0091EA"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_beranda"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/nav_transaksi"
        android:iconTint="#0091EA"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/nav_transaksi"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/nav_akun"
        android:iconTint="#0091EA"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/nav_akun"
        app:showAsAction="never"></item>
</menu>