<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.satriawibawa.myapplication.daopackage.User" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#edf6f9"
        android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_laundry"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JSM Laundry"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#1d3557"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_lgusername_layout"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/input_lgusername"
                android:autofillHints=""
                android:hint="@string/input_username"
                android:inputType="text"
                android:text="@={user.username}"
                android:textColorHint="#1d3557"
                android:textColor="#1d3557"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_lgemail_layout"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:startIconDrawable="@drawable/ic_baseline_account_box_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/input_lgemail"
                android:autofillHints=""
                android:hint="@string/input_email"
                android:inputType="text"
                android:text="@={user.email}"
                android:textColorHint="#1d3557"
                android:textColor="#1d3557"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="30dp"-->
<!--            android:hint="@string/input_username"-->
<!--             />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_lgpassword_layout"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/input_lgpassword"
                android:autofillHints=""
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:text="@={user.password}"
                android:textColorHint="#1d3557"
                android:textColor="#1d3557"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <EditText-->
<!--            android:inputType="textPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="30dp"-->
<!--            android:text="@={user.password}"-->
<!--            android:hint="@string/input_password"/>-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/login"
            android:backgroundTint="#1d3557"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:gravity="center"
            android:textSize="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register now"
            android:backgroundTint="@color/cardview_shadow_start_color"/>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</layout>