<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.satriawibawa.myapplication.daopackage.User" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#edf6f9"
        android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

<!--        <ImageView-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:src="@drawable/logo_laundry"/>-->
<!--        <de.hdodenhof.circleimageview.CircleImageView-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:src="@drawable/ic_baseline_people_24"-->
<!--            android:id="@+id/avatar"-->
<!--            />-->
<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="90dp"-->
<!--            android:text="@string/change_photo"-->
<!--            android:id="@+id/btnUpdatePhoto"-->
<!--            />-->

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="30dp"-->
<!--            android:text="@={user.username}">-->
<!--&lt;!&ndash;            android:hint="@string/input_username"&ndash;&gt;-->
<!--        </TextView>-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/input_edpassword_layout"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginHorizontal="40dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:id="@+id/input_edpassword"-->
<!--                android:autofillHints=""-->
<!--                android:hint="@string/input_password"-->
<!--                android:inputType="textPassword"-->
<!--                android:text="@={user.password}"-->
<!--                android:textColorHint="#1d3557"-->
<!--                android:textColor="#1d3557"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/input_ednohp_layout"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginHorizontal="40dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--            app:startIconDrawable="@drawable/ic_call_24dp">-->
<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:id="@+id/input_ednohp"-->
<!--                android:autofillHints=""-->
<!--                android:hint="@string/input_number_phone"-->
<!--                android:inputType="phone"-->
<!--                android:text="@={user.noPhone}"-->
<!--                android:textColorHint="#1d3557"-->
<!--                android:textColor="#1d3557"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->
<!--        <EditText-->
<!--            android:inputType="phone"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="20dp"-->
<!--            android:text="@={user.noPhone}"-->
<!--            android:hint="@string/input_number_phone">-->
<!--        </EditText>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="70dp"
            >

<!--            <ImageView-->
<!--                android:layout_width="64dp"-->
<!--                android:layout_height="64dp"-->
<!--                android:src="@drawable/ic_baseline_people_24"-->
<!--                />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    tools:text="Email"
                    android:textSize="17sp"
                    android:textStyle="italic"
                    />

                <TextView
                    android:id="@+id/showEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="15dp"
                    tools:text="Emailnya disini"
                    />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/username"
                tools:text="@string/username"
                android:textSize="17sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/showUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="15dp"
                tools:text="Usernamenya disini"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Password"
                tools:text="Password"
                android:textSize="17sp"
                android:textStyle="italic"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/showPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="15dp"
                tools:text="Passwordnya disini"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="41dp"
                android:layout_marginLeft="30dp"
                android:backgroundTint="#1d3557"
                android:text="@string/cancel">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#1d3557"
                android:text="@string/edit_your_profile">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</layout>